Refactored the page classes Optimized clicking methods on pages Implemented cross-browser testing feature